--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,20 +9,23 @@ body {
   background-image: url("../../assets/img/hero-mobile.jpg");
   background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
   color: #333;
 }
 
-#hero {
-  background-image: url("../../assets/img/hero.jpg");
+@media (min-width: 768px) {
+  #hero {
+    background-image: url("../../assets/img/hero.jpg");
+  }
 }
 
 .navbar-light .navbar-brand {
   background-image: url("../../assets/img/logo.svg");
   background-repeat: no-repeat;
-  width: 150px;
   background-position: center;
   background-size: 80%;
-  height: 40px;
+  width: 130px;
+  height: 20px;
 }
 
 #navcol-1 {
@@ -32,24 +35,21 @@ body {
   text-transform: uppercase;
 }
 
-.navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
-  color: rgba(0,0,0,0.9);
-}
-
 .navbar-light .navbar-nav .nav-link {
-  color: rgb(34,34,34);
+  color: #222;
+  padding: 10px;
 }
 
 #title {
-  font-size: 30px;
   font-family: Montserrat, sans-serif;
   font-weight: 300;
+  font-size: 22px;
   margin-top: 40px;
 }
 
-#subheading {
+#subtitle {
   font-family: Montserrat, sans-serif;
-  font-size: 40px;
+  font-size: 46px;
   font-weight: bold;
 }
 
@@ -64,26 +64,25 @@ body {
   margin-bottom: 0;
 }
 
-.p-bottom {
-  font-size: 13px;
-  font-family: Montserrat, sans-serif;
-  font-weight: normal;
+.p-bot {
+  font-size: 12px;
+  font-weight: 100;
 }
 
-.btn-primary:hoover {
-  background-color: rgba(190,6,6,0);
-  border: 3px solid #fff;
-  border-radius: 30px;
+.reserve-button:hover, .reserve-button:focus, .reserve-button:active {
+  background-color: rgba(0,98,204,0) !important;
+  border: 3px solid #fff !important;
+  box-shadow: none !important;
 }
 
 .reserve-button {
-  background-color: rgba(44,49,52,0);
+  background-color: rgba(0,98,204,0);
   border: 3px solid #fff;
   border-radius: 30px;
 }
 
-.arrow-button {
-  color: #ffffff;
+.btn.btn-link.btn-block.arrow-button {
+  color: rgb(255,255,255);
   font-size: 32px;
 }
 
@@ -93,7 +92,7 @@ body {
 }
 
 .col.with-borders {
-  border: 1px solid rgba(255,255,255,0.16);
+  border: 1px solid rgba(255,255,255,0.2);
   border-top: 0;
   border-bottom: 0;
 }
@@ -114,67 +113,37 @@ body {
   }
 }
 
-@media (min-width: 992px) {
-  #stats {
-    margin: 0 auto;
-    margin-bottom: 250px;
-    font-size: 15px;
-    width: 500px;
-    font-family: Montserrat, sans-serif;
-    font-weight: normal;
-  }
+#stats {
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 150px;
+  font-size: 15px;
 }
 
 @media (min-width: 768px) {
   #stats {
-    margin: 0 auto;
-    margin-bottom: 200px;
-    font-size: 15px;
-    width: 90%;
-    font-family: Montserrat, sans-serif;
-    font-weight: normal;
-    padding-left: 2.5em;
-    padding-right: 2.5em;
-  }
-}
-
-@media (min-width: 1200px) {
-  #stats {
+    width: 600px;
     margin: 0 auto;
     margin-bottom: 150px;
     font-size: 15px;
-    width: 90%;
-    font-family: Montserrat, sans-serif;
-    font-weight: normal;
-    padding-left: 25em;
-    padding-right: 25em;
   }
 }
 
-@media (min-width: 576px) {
-  #stats {
-    margin: 0 auto;
-    margin-bottom: 150px;
-    font-size: 8px;
-    width: 90%;
-    font-family: Montserrat, sans-serif;
-    font-weight: normal;
-  }
-}
-
-@media (min-width: 300px) {
-  #stats {
-    margin: 0 auto;
-    margin-bottom: 150px;
-    font-size: 15px;
-    width: 90%;
-    font-family: Montserrat, sans-serif;
-    font-weight: normal;
-  }
-}
-
-.table thead th {
+#stats .table thead th {
+  text-align: left;
+  padding-left: 0;
   border-top: 0;
+}
+
+#stats .cell-left {
+  text-align: left;
+  padding-left: 0;
+}
+
+#stats .cell-right {
+  text-align: right;
+  font-weight: bold;
+  padding-right: 0;
 }
 
 #aero {
@@ -191,6 +160,12 @@ body {
 }
 
 #aero .h3, h3 {
+  font-family: Montserrat, sans-serif;
+}
+
+#interior {
+  width: 100%;
+  height: 60vh;
 }
 
 @media (min-width: 768px) {
@@ -200,13 +175,14 @@ body {
   }
 }
 
-#interior {
-  width: 100%;
-  height: 100vh;
+#interior .figure {
+  max-width: 90%;
 }
 
-#interior .figure {
-  max-width: 70%;
+@media (min-width: 768px) {
+  #interior .figure {
+    max-width: 70%;
+  }
 }
 
 #interior .figure-caption {
@@ -215,9 +191,9 @@ body {
 }
 
 #caption-title {
+  margin-right: 20px;
   font-size: 20px;
   font-family: Montserrat, sans-serif;
-  margin-right: 20px;
 }
 
 #topview {
@@ -233,12 +209,11 @@ body {
   margin-bottom: 150px;
 }
 
-.btn-primary:hover {
-  color: #fff;
-  background-color: rgba(255,255,255,0.2);
-  border-color: #ffffff;
+#topview .h4, h4 {
+  font-family: Montserrat, sans-serif;
 }
 
-.btn.btn-primary.btn-block.reserve-button {
+#topview p {
+  font-weight: 100;
 }
 
